--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,12 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+Welcome to my Rails Party Planner app. In this app you and your friends can create accounts and make parties and invite eachother. It's a great way to keep track of all the food and friends at your parties.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+* Download from GitHub
+* `cd` to directory in terminal
+* Enter `bundle install` in terminal to install dependencies/gems
+* Enter `rails s` to start the app
+* Navigate to `http://localhost:3000` to begin
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Built on Rails 4.2.10 and Ruby 2.3.1p112
